--- a/Index.html
+++ b/Index.html
@@ -119,7 +119,24 @@
 
     </section>
     <footer>
-        sociela links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="blank" rel="noopener" 
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="blank" rel="noopener" 
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="blank" rel="noopener" 
+                aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="blank" rel="noopener" 
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
     
     <script src="https://kit.fontawesome.com/8e9be19296.js" crossorigin="anonymous"></script>
