--- a/Index.html
+++ b/Index.html
@@ -119,7 +119,7 @@
 
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://facebook.com" target="blank" rel="noopener" 
                 aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
@@ -134,7 +134,7 @@
             </li>
             <li>
                 <a href="https://instagram.com" target="blank" rel="noopener" 
-                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i> </a>
             </li>
         </ul>
     </footer>
